--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --main-color: #282624;
   --light-gray: #f3f3f3;
